# kterm

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
src/: app.rs  app_test.rs  event.rs  main.rs  subprocess_test.rs  types.rs  ui_test.rs
src/k8s/: actions.rs  client.rs  logs.rs  mod.rs  resources.rs
src/ui/: detail.rs  header.rs  help.rs  logs.rs  mod.rs  resource_list.rs  search.rs
