[package]
name = "kterm"
version = "0.1.0"
edition = "2021"
description = "A simple terminal for your Kubernetes"
license = "MIT"

[dependencies]
ratatui = { version = "0.30", default-features = true }
crossterm = { version = "0.29", features = ["event-stream"] }
kube = { version = "3.0", features = ["client", "config", "runtime", "ws"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tempfile = "3"

[dev-dependencies]
tower-test = "0.4"
http = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }
